# helium

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
.env/clion/: style.xml
src/: main.cpp  type_id.hpp
src/core/: core_macro.hpp  type_id.hpp  type_index.hpp  type_info.hpp  type_name.hpp
src/core/test/: type_id_test.cpp  type_index_test.cpp  type_name_test.cpp
src/utils/: delegate.hpp
src/utils/test/: delegate_test.cpp
